# mtnzos

./: .gitpod.Dockerfile  Cargo.toml  OVMF_VARS-1024x768.fd  build.py  main.rs  x86_64-none-efi.json
.cargo/: config
