[package]
name = "mtnzos"
version = "0.1.0"
authors = ["伊吹英晃 <ibuki-90@hotmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.8.0"
uefi-services = "0.5.0"
log = { version = "0.4.11", default-features = false }

[[bin]]
name = "mtnzos"
path = "main.rs"